add binds as sponsor

--- a/themes/backendbrasil/layout/index.hbs
+++ b/themes/backendbrasil/layout/index.hbs
@@ -155,7 +155,7 @@
     </article>
 
     {{#each site.data.partners_sponsors.sponsors}}
-      <article class="tile is-child is-flex-one-quarter no-grow no-shrink">
+      <article class="tile is-child is-flex-one-quarter-desktop is-flex-half-mobile is-flex-full no-grow no-shrink">
         <a href="{{url}}" title="{{name}}" target="_blank">
           <img src="{{imgsrc image}}" alt="{{image_description}}"/>
         </a>
@@ -169,7 +169,7 @@
     </article>
 
     {{#each site.data.partners_sponsors.partners}}
-      <article class="tile is-child is-flex-one-quarter no-grow no-shrink">
+      <article class="tile is-child is-flex-one-quarter-desktop is-flex-half-mobile is-flex-full no-grow no-shrink">
         <a href="{{url}}" title="{{description}}" target="_blank">
           <img src="{{imgsrc image}}" alt="{{image_description}}"/>
         </a>
