comment job language selector

--- a/themes/backendbrasil/layout/blog.hbs
+++ b/themes/backendbrasil/layout/blog.hbs
@@ -17,30 +17,32 @@
   </article>
 </section>
 
-<section class="blog--highlights posts tile-is-flexible tile is-ancestor">
-  <article class="blog--highlights-title tile is-flex-full">
-    <h2>{{_p 'blog.highlights'}}</h2>
-  </article>
+{{#if theme.config.highlights}}
+  <section class="blog--highlights posts tile-is-flexible tile is-ancestor">
+    <article class="blog--highlights-title tile is-flex-full">
+      <h2>{{_p 'blog.highlights'}}</h2>
+    </article>
 
-  <section class="tile tile-is-flexible is-flex-full">
-    {{#each site.posts.data}}
-      {{> post 
-        index=@index 
-        path=path 
-        description=description 
-        title=title 
-        thumbnail=thumbnail 
-        thumbnail_alt=thumbnail_alt 
-        categories=categories
-        hide_extra=true
-      }}
-    {{/each}}
+    <section class="tile tile-is-flexible is-flex-full">
+      {{#each site.posts.data}}
+        {{> post 
+          index=@index 
+          path=path 
+          description=description 
+          title=title 
+          thumbnail=thumbnail 
+          thumbnail_alt=thumbnail_alt 
+          categories=categories
+          hide_extra=true
+        }}
+      {{/each}}
 
-    {{#eq site.posts.data.length 0}}
-      <span>{{__ 'blog.no_posts'}}</span>
-    {{/eq}}
+      {{#eq site.posts.data.length 0}}
+        <span>{{__ 'blog.no_posts'}}</span>
+      {{/eq}}
+    </section>
   </section>
-</section>
+{{/if}}
 
 <section class="blog--posts posts tile-is-flexible tile is-ancestor">
   <article class="blog--highlights-title tile is-flex-full">
