fix footer color

--- a/themes/backendbrasil/assets/styles/footer.scss
+++ b/themes/backendbrasil/assets/styles/footer.scss
@@ -78,6 +78,8 @@
     flex-flow: column;
   }
 
+  .navbar { background-color: #fafafa !important; }
+
   article:first-child {
     align-items: flex-start;
     text-align: center;
