add member twitter

--- a/themes/backendbrasil/layout/quem-somos.hbs
+++ b/themes/backendbrasil/layout/quem-somos.hbs
@@ -74,7 +74,7 @@
 
           {{#isTruthy twitter.length}}
             <li>
-              <a href="{{twitter}}" target="_blank">
+              <a href="https://twitter.com/{{twitter}}" target="_blank">
                 <i target="_blank" class="fab fa-twitter"></i>
               </a>
             </li>
