--- a/themes/backendbrasil/layout/partials/head.hbs
+++ b/themes/backendbrasil/layout/partials/head.hbs
@@ -56,3 +56,24 @@
 <meta property="og:image" content="{{page.thumbnail}}"/>
 <meta property="og:description" content="{{page.description}}"/>
 <meta property="og:locale" content="pt_BR"/>
+  
+<link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://backendbrasil.com.br/img/apple-touch-icon-57x57.png" />
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://backendbrasil.com.br/img/apple-touch-icon-114x114.png" />
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://backendbrasil.com.br/img/apple-touch-icon-72x72.png" />
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://backendbrasil.com.br/img/apple-touch-icon-144x144.png" />
+<link rel="apple-touch-icon-precomposed" sizes="60x60" href="https://backendbrasil.com.br/img/apple-touch-icon-60x60.png" />
+<link rel="apple-touch-icon-precomposed" sizes="120x120" href="https://backendbrasil.com.br/img/apple-touch-icon-120x120.png" />
+<link rel="apple-touch-icon-precomposed" sizes="76x76" href="https://backendbrasil.com.br/img/apple-touch-icon-76x76.png" />
+<link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://backendbrasil.com.br/img/apple-touch-icon-152x152.png" />
+<link rel="icon" type="image/png" href="/img/favicon-196x196.png" sizes="196x196" />
+<link rel="icon" type="image/png" href="/img/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16" />
+<link rel="icon" type="image/png" href="/img/favicon-128.png" sizes="128x128" />
+<meta name="application-name" content="BackEndBrasil"/>
+<meta name="msapplication-TileColor" content="#FFFFFF" />
+<meta name="msapplication-TileImage" content="https://backendbrasil.com.br/img/mstile-144x144.png" />
+<meta name="msapplication-square70x70logo" content="https://backendbrasil.com.br/img/mstile-70x70.png" />
+<meta name="msapplication-square150x150logo" content="https://backendbrasil.com.br/img/mstile-150x150.png" />
+<meta name="msapplication-wide310x150logo" content="https://backendbrasil.com.br/img/mstile-310x150.png" />
+<meta name="msapplication-square310x310logo" content="https://backendbrasil.com.br/img/mstile-310x310.png" />
