disable category path

--- a/themes/backendbrasil/layout/partials/post.hbs
+++ b/themes/backendbrasil/layout/partials/post.hbs
@@ -26,7 +26,7 @@
   <ul class="posts--categories">
     {{#each categories.data}}
       <li>
-        <a href="{{path}}" title="{{name}}">{{name}}</a>
+        <a href="{{../path}}" title="{{name}}">{{name}}</a>
       </li>
     {{/each}}
   </ul>
