--- a/themes/backendbrasil/assets/styles/home.scss
+++ b/themes/backendbrasil/assets/styles/home.scss
@@ -89,14 +89,14 @@
   }
 
   .project {
-    @include generate-post-margin($tablet, 3);
+    @include generate-post-margin($tablet, 2);
     @include generate-post-margin($desktop, 4);
     align-content: stretch;
     flex-flow: column;
 
     > a { display: inline-flex; }
 
-    @media screen and (max-width: $tablet) {
+    @media screen and (max-width: $desktop) {
       margin-bottom: 2rem !important;
     }
 
