--- a/themes/backendbrasil/layout/index.hbs
+++ b/themes/backendbrasil/layout/index.hbs
@@ -10,7 +10,7 @@
     </h1>
     <p>{{__ 'home.header.description'}}</p>
 
-    {{> buttons}}
+    {{> buttons lineButton=true}}
   </article>
 </section>
 
