--- a/themes/backendbrasil/layout/partials/buttons.hbs
+++ b/themes/backendbrasil/layout/partials/buttons.hbs
@@ -1,4 +1,4 @@
-<article class="social-buttons">
+<article class="social-buttons {{#if lineButton}}social-buttons--line{{/if}}">
   <a target="_blank" class="button" href="https://twitter.com/{{config.twitter}}">
     <i target="_blank" class="fab fa-twitter"></i>
     Twitter
