--- a/themes/backendbrasil/layout/partials/footer.hbs
+++ b/themes/backendbrasil/layout/partials/footer.hbs
@@ -40,7 +40,6 @@
 <footer class="footer tile is-ancestor tile-is-flexible has-default-padding">
   <article class="tile is-flex-half-mobile is-flex-full">
     <img src="{{imgsrc 'Logo-Horizontal.png'}}" width="200"/>
-    <p>{{__ 'footer.copyright'}}</p>
   </article>
 
   <article class="tile is-flex-half-mobile is-flex-full">
@@ -53,6 +52,10 @@
     </nav>
 
     {{> buttons}}
+  </article>
+    
+  <article class="tile is-flex-full">
+    <p>{{__ 'footer.copyright'}}</p>
   </article>
 </footer>
 
