--- a/themes/backendbrasil/layout/index.hbs
+++ b/themes/backendbrasil/layout/index.hbs
@@ -79,7 +79,8 @@
         block 
         block-transparent 
         is-flex-full 
-        is-flex-one-third-mobile 
+        is-flex-half-mobile
+        is-flex-one-third-desktop
         no-grow 
         no-shrink 
         is-child
