adicionei a Mari pro time, apliquei o helper imgsrc pros avatares da organização e também adicionei o twitter do Khaue

--- a/themes/backendbrasil/layout/quem-somos.hbs
+++ b/themes/backendbrasil/layout/quem-somos.hbs
@@ -55,7 +55,7 @@
   {{#each site.data.github_members}}
     <article class="tile about--team-member is-child is-flex-half-mobile is-flex-one-third-desktop is-flex-full no-grow no-shrink">
       <div class="about--team-photo">
-        <img src="{{avatar}}" alt="{{description}}"/>
+        <img src="{{imgsrc avatar}}" alt="{{description}}"/>
       </div>
 
       <div class="about--team-description">
