adicionei as redes sociais da Marianna =)

--- a/themes/backendbrasil/layout/quem-somos.hbs
+++ b/themes/backendbrasil/layout/quem-somos.hbs
@@ -79,6 +79,14 @@
               </a>
             </li>
           {{/isTruthy}}
+
+          {{#each social}}
+            <li>
+              <a href="{{{url}}}" target="_blank">
+                <i target="_blank" class="fab {{{icon}}}"></i>
+              </a>
+            </li>
+          {{/each}}
         </ul>
       </div>
     </article>
