Trocados os nomes dos estados pelas siglas - Para ampliar o nível de busca do filtro

--- a/themes/backendbrasil/layout/vagas.hbs
+++ b/themes/backendbrasil/layout/vagas.hbs
@@ -23,8 +23,8 @@
     <div class="select">
       <select name="state" id="state">
         <option value="clear">{{__ 'jobs.form.state'}}</option>
-        {{#each theme.states}}
-          <option value="{{this}}">{{this}}</option>
+        {{#each theme.states as |state stateId|}}
+          <option value="{{stateId}}">{{state}}</option>
         {{/each}}
       </select>
     </div>
