--- a/themes/backendbrasil/layout/article.hbs
+++ b/themes/backendbrasil/layout/article.hbs
@@ -16,10 +16,20 @@
     is-child tile 
     no-grow no-shrink
     is-flex-full
-    is-flex-half-mobile
-    is-flex-two-thirds-desktop
+    is-flex-two-thirds-mobile
   ">
     {{{page.content}}}
+  </article>
+</section>
+
+<section class="article--sep tile tile-is-flexible is-ancestor">
+  <article class="
+    is-child tile 
+    no-grow no-shrink
+    is-flex-full
+    is-flex-two-thirds-mobile
+  ">
+    <hr />
   </article>
 </section>
 
@@ -28,8 +38,7 @@
     is-child tile 
     no-grow no-shrink
     is-flex-full
-    is-flex-half-mobile
-    is-flex-two-thirds-desktop
+    is-flex-two-thirds-mobile
   ">
     <a target="_blank" href="https://twitter.com/{{config.twitter}}">
       <i target="_blank" class="fab fa-twitter"></i>
@@ -49,13 +58,23 @@
   </article>
 </section>
 
+<section class="article--sep tile tile-is-flexible is-ancestor">
+  <article class="
+    is-child tile 
+    no-grow no-shrink
+    is-flex-full
+    is-flex-two-thirds-mobile
+  ">
+    <hr />
+  </article>
+</section>
+
 <section class="article--comments tile tile-is-flexible is-ancestor">
   <article class="
     is-child tile 
     no-grow no-shrink
     is-flex-full
-    is-flex-half-mobile
-    is-flex-two-thirds-desktop
+    is-flex-two-thirds-mobile
   ">
     <div id="disqus_thread"></div>
     <script>
